# caller-app

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: requirements.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  axios.js  index.js
frontend/src/components/: About.js  Body.js  BodyLayout.js  BodyStuff.js  Footer.js  Green.css  Green.js  Header.js  HowItWorks.js  Items.js  ItemsLoading.js  Landing.js  LoadingCircular.js  LoadingLinear.js  Login.js  Logout.js  Notifications.js  ProductHero.js  ProductHeroLayout.js  Profile.js  Register.js  Rotation.js  RotationDetail.js  StartRotation.js  Table.js  weServe.js
frontend/src/services/: axios.js
notifications/: admin.py  models.py  serializers.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_auto_20201029_0241.py  0003_auto_20201029_2348.py  0004_notification_rotation.py  0005_notification_completed.py  0006_auto_20201030_1922.py
server/: settings.py  urls.py
server/twilio/: example.py
twilioHandler/: apps.py  tests.py  urls.py  views.py
twilioHandler/twilio/: example.py  notification_orchestrator.py
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username.py  0003_profile.py  0004_auto_20201029_1902.py  0005_profile_manager.py
